2008-01-24 fabien
* add version number

2007-11-09 fabien
* Initial revision