@@ -1,3 +1,4 @@
+portal_categories/base_amount/salaire_net_imposable
 portal_categories/salary_range/france
 portal_categories/salary_range/france/tranche_1
 portal_categories/salary_range/france/tranche_2
