@@ -1,3 +1,6 @@
+2009-01-28 fabien
+* add salaire_net_imposable base_amount category
+
 2008-01-24 fabien
 * add version number
 
